IDEA-304403 - Attempt to fix with build-helper-maven-plugin - FAILED

--- a/A/pom.xml
+++ b/A/pom.xml
@@ -79,6 +79,11 @@
             <showWarnings>true</showWarnings>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
