--- a/B/foobar/pom.xml
+++ b/B/foobar/pom.xml
@@ -11,6 +11,15 @@
   <artifactId>foobar</artifactId>
   <packaging>jar</packaging>
 
-  <name>IDEA-304403 - B- foobarr</name>
+  <name>IDEA-304403 - B- foobar</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.0</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 </project>
